# doc2pdf

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOC2PDF_API.postman_collection.json  DOC2PDF_API_COMPLETE.postman_collection.json  DOCKER_GUIDE.md  Dockerfile  EXEMPLO_POSTMAN_v1.3.0.md  EXEMPLO_TAGS_REPETIDAS.md  LICENSE  POSTMAN_GUIDE.md  QUALIDADE_PDF.md  README.md  RENDER_GUIDE.md  TESTES_COMPLETOS.md  TEST_EXAMPLES.md  app.py  bump_version.py  docker-compose.yml  example_usage.py  openapi.yaml  pyproject.toml  render.yaml  requirements.txt  setup.py  version.py  wsgi.py
app/: __init__.py
app/routes/: convert.py  convert_file.py  health.py  process.py  swagger.py
app/services/: docx_service.py  pdf_service.py
app/utils/: encoders.py  logger.py  validators.py
config/: settings.py
docs/: README.md
docs/architecture/: ARQUITETURAS_COMPARACAO.md
docs/examples/: curl_examples.sh  javascript_example.js
docs/guides/: RENDER_FREE_VALIDATION.md
docs/postman/: DOC2PDF_v1.5.0_Tests.postman_collection.json
examples/: python_example.py
tests/: README.md
